fixup(super-admin): MVP-c3 — Copilot + Sonar review fixes (7 findings)
Address every finding from the PR #243 review pass.

Copilot findings:
1. DLQ count never decreased after replay because we preserve the
   original FAILED row for history. New
   IntegrationMessageEventRepository.countUnresolvedDeadLetters()
   counts FAILED rows whose correlationId has no later attempt;
   service.search() now uses it. The original row stays FAILED so
   the history is intact, but the badge ticks down once a replay
   row supersedes it.
2. replay() now distinguishes "id not found" (404), "original is
   not in FAILED state" (409 ConflictException), and "recorder
   could not persist the replay row" (500 ResponseStatusException).
   The prior code used ResourceNotFoundException for the persistence
   failure, which mapped to a misleading 404 for monitoring.
3. Search response strips the payload to keep list pages bounded
   (worst-case ~12 MB at the lowered MAX_PAGE_SIZE = 200 instead of
   the prior ~320 MB at 5 000). New GET /{messageId} detail endpoint
   returns the full row including payload; new
   IntegrationMessageEventDTO toSummaryDto / toDto split powers
   both paths.

Sonar findings:
4. SuperAdminIntegrationMessageController.search() uses Math.clamp
   instead of nested Math.min/Math.max.
5. SuperAdminAuditAggregationServiceImpl.searchAggregated cognitive
   complexity dropped from 21 → ≤15 by extracting fetchAuditEventLogRows
   / fetchFrontendRows / fetchPermissionMatrixRows / queryAuditEventLog
   / slice helpers. Behaviour is unchanged.
6. IntegrationMessageRecorder.record() renamed to recordMessage() so
   it does not collide with Java 21's contextual record keyword.
   StubPartnerConnector + tests follow the rename.
7. Reworded the comment block in RegionPolicyServiceImplTest that
   Sonar's S125 heuristic mistook for commented-out code (the
   "(same URL submitted)" parenthetical + trailing semicolon).

Tests
  +5 service tests (FAILED-state precondition, payl